k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: "10" # Max 10 Requests pro Sekunde pro IP
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
  name: wtr-ingress
spec:
  rules:
    - host: wtr.tino.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wtr-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - wtr.tino.sh
      secretName: wtr-tino-sh-tls
